--- a/02-multi-play.yml
+++ b/02-multi-play.yml
@@ -2,45 +2,41 @@
 ---
 - name: Update n1 server
   hosts: n1
-
   tasks:
-  - name: Create Directory
-    file:
-      path: /home/centos/new_dir
-      state: directory
+    - name: Create Directory 1
+      file:
+        path: /home/centos/new_dir
+        state: directory
 
-     - name: Create Directory
-    file:
-      path: /home/centos/new_dir_1
-      state: directory
- 
-     name: Update n2 server
+    - name: Create Directory 2
+      file:
+        path: /home/centos/new_dir_1
+        state: directory
+
+- name: Update n2 server
   hosts: n2
-
   tasks:
-  - name: Create Directory
-    file:
-      path: /home/centos/new_dir_2
-      state: directory
+    - name: Create Directory 3
+      file:
+        path: /home/centos/new_dir_2
+        state: directory
 
-      - name: Create Directory
-    file:
-      path: /home/centos/new_dir_n2
-      state: directory
+    - name: Create Directory 4
+      file:
+        path: /home/centos/new_dir_n2
+        state: directory
 
-     name: Update g2 servers
+- name: Update g2 servers
   hosts: g2
-
   tasks:
-  - name: Create Directory
-    file:
-      path: /home/centos/new_dir_g2
-      state: directory
+    - name: Create Directory 5
+      file:
+        path: /home/centos/new_dir_g2
+        state: directory
 
-      - name: Create Directory
-    file:
-      path: /home/centos/new_dir_3
-      state: directory
+    - name: Create Directory 6
+      file:
+        path: /home/centos/new_dir_3
+        state: directory
 
-...
 
