--- a/06-multi-HW.yml
+++ b/06-multi-HW.yml
@@ -1,10 +1,9 @@
 ---
 - name: Install Http server
-  hosts: g3
+  hosts: n6
   become: yes
 
   tasks:
-  hosts: n6
     - name: Install HTTPD
       yum:
         name: httpd
@@ -18,10 +17,11 @@
     - name: Enable Httpd
       service:
         name: httpd
-        enabled: yes 
+        enabled: yes
 
-tasks:
+- name: Tasks for n5
   hosts: n5
+  tasks:
     - name: Install Apache2
       yum:
         name: apache2
@@ -37,8 +37,9 @@ tasks:
         name: apache2
         enabled: yes
 
-tasks:
+- name: Tasks for n7
   hosts: n7
+  tasks:
     - name: Install HTTPD on CentOS
       yum:
         name: httpd
