--- a/cindy.ini
+++ b/cindy.ini
@@ -3,6 +3,7 @@ n1 ansible_host=172.31.19.97 ansible_user=centos ansible_ssh_private_key=/home/c
 n2 ansible_host=172.31.30.3 ansible_user=centos ansible_ssh_private_key=/home/centos/cindy.pem ansible_ssh_common_args='-o StrictHostKeyChecking=no'
 
 [g2]
-n3 ansible_host=172.31.14.154 ansible_user=ubuntu ansible_ssh_private_key=/home/centos/cindy.pem ansible_ssh_common_args='-o StrictHostKeyChecking=no'
+[my_hosts]
+n3 ansible_host=172.31.14.154 ansible_user=ubuntu ansible_ssh_private_key_file=/home/centos/cindy.pem
 n4 ansible_host=172.31.14.65 ansible_user=ubuntu ansible_ssh_private_key=/home/centos/cindy.pem ansible_ssh_common_args='-o StrictHostKeyChecking=no'
 n5 ansible_host=172.31.0.185 ansible_user=ubuntu ansible_ssh_private_key=/home/centos/cindy.pem ansible_ssh_common_args='-o StrictHostKeyChecking=no'
