--- a/cindy.ini
+++ b/cindy.ini
@@ -5,5 +5,5 @@ n2 ansible_host=172.31.30.3 ansible_user=centos ansible_ssh_private_key=/home/ce
 [g2]
 [my_hosts]
 n3 ansible_host=172.31.14.154 ansible_user=ubuntu ansible_ssh_private_key_file=/home/centos/cindy.pem
-n4 ansible_host=172.31.14.65 ansible_user=ubuntu ansible_ssh_private_key=/home/centos/cindy.pem ansible_ssh_common_args='-o StrictHostKeyChecking=no'
-n5 ansible_host=172.31.0.185 ansible_user=ubuntu ansible_ssh_private_key=/home/centos/cindy.pem ansible_ssh_common_args='-o StrictHostKeyChecking=no'
+n4 ansible_host=172.31.1.234 ansible_user=centos ansible_ssh_private_key=/home/centos/cindy.pem ansible_ssh_common_args='-o StrictHostKeyChecking=no'
+n5 ansible_host=172.31.8.254 ansible_user=centos ansible_ssh_private_key=/home/centos/cindy.pem ansible_ssh_common_args='-o StrictHostKeyChecking=no'
