--- a/07-multi-play1.yml
+++ b/07-multi-play1.yml
@@ -1,44 +1,30 @@
----
-- name: Install Http server
-  hosts: g2
+- name: Install and Configure HTTP Server
+  hosts: all
   become: yes
-
   tasks:
-    - name: Install HTTPD
+    - name: Install HTTPD on Amazon Linux
       yum:
         name: httpd
         state: present
-      when: ansible_distribution ="Amazon"
+      when: ansible_distribution == "Amazon"
 
-    - name: Start Httpd
-      service:
-        name: httpd
-        state: started
-      when: ansible_distribution ="Amazon"    
-
-    - name: Enable Httpd
-      service:
-        name: httpd
-        enabled: yes 
-      when: ansible_distribution ="Amazon"
-
-    - name: Install Apache2
+    - name: Install Apache2 on Ubuntu
       apt:
         name: apache2
         state: present
-      when: ansible_distribution ="Ubuntu"
+      when: ansible_distribution == "Ubuntu"
 
-    - name: Start apache2
+    - name: Install HTTPD on CentOS
+      yum:
+        name: httpd
+        state: present
+      when: ansible_distribution == "CentOS"
+
+    - name: Start and Enable HTTP Service
       service:
-        name: apache2
+        name: "{{ 'httpd' if ansible_distribution == 'Amazon' or ansible_distribution == 'CentOS' else 'apache2' }}"
         state: started
-      when: ansible_distribution ="Ubuntu"
-
-    - name: Enable Apache2
-      service:
-        name: apache2
-        enabled: yes 
-      when: ansible_distribution ="Ubuntu"  
+        enabled: yes
 ...
 
 
