--- a/07-multi-play1.yml
+++ b/07-multi-play1.yml
@@ -1,5 +1,5 @@
 - name: Install and Configure HTTP Server
-  hosts: all
+  hosts: g2
   become: yes
   tasks:
     - name: Install HTTPD on Amazon Linux
