--- a/07-multi-play1.yml
+++ b/07-multi-play1.yml
@@ -15,7 +15,7 @@
       when: ansible_distribution == "Ubuntu"
 
     - name: Install HTTPD on CentOS
-      yum:
+      dnfu:
         name: httpd
         state: present
       when: ansible_distribution == "CentOS"
