--- a/cindy.ini
+++ b/cindy.ini
@@ -7,3 +7,6 @@ n2 ansible_host=172.31.30.3 ansible_user=centos ansible_ssh_private_key=/home/ce
 n3 ansible_host=172.31.14.154 ansible_user=ubuntu ansible_ssh_private_key_file=/home/centos/cindy.pem
 n4 ansible_host=172.31.1.234 ansible_user=centos ansible_ssh_private_key=/home/centos/cindy.pem ansible_ssh_common_args='-o StrictHostKeyChecking=no'
 n5 ansible_host=172.31.12.230 ansible_user=ec2-user ansible_ssh_private_key=/home/centos/cindy.pem ansible_ssh_common_args='-o StrictHostKeyChecking=no'
+
+[all]
+n5 ansible_python_interpreter=/usr/bin/python
