--- a/07-multi-play1.yml
+++ b/07-multi-play1.yml
@@ -1,4 +1,4 @@
-- name: Install and Configure HTTP Server
+- name: Install HTTP Server
   hosts: g2
   become: yes
   tasks:
@@ -8,10 +8,34 @@
         state: present
       when: ansible_distribution == "Amazon"
 
+    - name: Start Httpd on Amazon Linux
+      service:
+        name: httpd
+        state: started
+      when: ansible_distribution == "Amazon"
+
+    - name: Enable Httpd on Amazon Linux
+      service:
+        name: httpd
+        enabled: yes 
+      when: ansible_distribution == "Amazon"
+
     - name: Install Apache2 on Ubuntu
       apt:
         name: apache2
         state: present
+      when: ansible_distribution == "Ubuntu"
+
+    - name: Start apache2 on Ubuntu
+      service:
+        name: apache2
+        state: started
+      when: ansible_distribution == "Ubuntu"
+
+    - name: Enable Apache2 on Ubuntu
+      service:
+        name: apache2
+        enabled: yes 
       when: ansible_distribution == "Ubuntu"
 
     - name: Install HTTPD on CentOS
@@ -20,11 +44,17 @@
         state: present
       when: ansible_distribution == "CentOS"
 
-    - name: Start and Enable HTTP Service
+    - name: Start Httpd on CentOS
       service:
-        name: "{{ 'httpd' if ansible_distribution == 'Amazon' or ansible_distribution == 'CentOS' else 'apache2' }}"
+        name: httpd
         state: started
-        enabled: yes
+      when: ansible_distribution == "CentOS"
+
+    - name: Enable Httpd on CentOS
+      service:
+        name: httpd
+        enabled: yes 
+      when: ansible_distribution == "CentOSne"
 ...
 
 
